THRESH_BINARY_INV

--- a/opencv480_20/opencv480_20.vcxproj.filters
+++ b/opencv480_20/opencv480_20.vcxproj.filters
@@ -18,12 +18,15 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="quickopencv.cpp">
+    <ClCompile Include="binary.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="quickopencv.h">
+    <ClInclude Include="util.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="binary.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
