--- a/opencv480_20/opencv480_20.vcxproj.filters
+++ b/opencv480_20/opencv480_20.vcxproj.filters
@@ -21,12 +21,21 @@
     <ClCompile Include="binary.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="connected_component.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="util.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="util.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="binary.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="connected_component.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
