--- a/opencv480_20/opencv480_20.vcxproj
+++ b/opencv480_20/opencv480_20.vcxproj
@@ -153,12 +153,14 @@
   <ItemGroup>
     <ClCompile Include="binary.cpp" />
     <ClCompile Include="connected_component.cpp" />
+    <ClCompile Include="contour.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="binary.h" />
     <ClInclude Include="connected_component.h" />
+    <ClInclude Include="contour.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
