--- a/opencv480_20/opencv480_20.vcxproj.filters
+++ b/opencv480_20/opencv480_20.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="contour.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="hough.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
