--- a/opencv480_20/opencv480_20.vcxproj
+++ b/opencv480_20/opencv480_20.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="binary.h" />
     <ClInclude Include="connected_component.h" />
     <ClInclude Include="contour.h" />
+    <ClInclude Include="hough.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
