--- a/opencv480_20/opencv480_20.vcxproj.filters
+++ b/opencv480_20/opencv480_20.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="video_my.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="corner_dect.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="util.h">
@@ -60,6 +63,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="video_my.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="corner_dect.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
